--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Menu De Navegacion Con Listas</title>
+		<title>Menu De Navegacion</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 	<body>
