--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<p></p>
 	</section>
 	
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
+	<script src="jquery-latest.js"></script>
 	<script src="menu.js"></script>
 </body>
 
