--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav>
 			<ul>
 				<li><a href="azt/azt.html"><span class="icon-house"></span>Azteca</a></li>
-				<li><a href="baj/baj.html"><span class="icon-suitcase"></span>Bajio</a></li>
+				<li><a href="bb/bb.html"><span class="icon-suitcase"></span>BBVA</a></li>
 				<li><a href="citi/citi.html"><span class="icon-rocket"></span>CitiBanamex</a></li>
 				<li><a href="norte/norte.html"><span class="icon-earth"></span>Banorte</a></li>
 				<li><a href="santa/santa.html"><span class="icon-mail"></span>Santander</a></li>
